--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "start:lambda": "netlify-lambda serve src/lambda",
     "build": "run-p build:**",
     "build:app": "gatsby build",
-    "build:lambda": "netlify-lambda build src/lambda"
+    "build:lambda": "netlify-lambda build src/lambda",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "http-proxy-middleware": "^0.19.1",
     "netlify-lambda": "^1.3.3",
     "npm-run-all": "^4.1.5"
