--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
+    "emotion": "^10.0.7",
+    "emotion-theming": "^10.0.7",
     "gatsby": "^2.1.18",
     "gatsby-image": "^2.0.30",
+    "gatsby-plugin-emotion": "^4.0.4",
     "gatsby-plugin-manifest": "^2.0.19",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-page-transitions": "^1.0.7",
@@ -22,8 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-helmet": "^5.2.0",
-    "react-jss": "^8.6.1"
+    "react-helmet": "^5.2.0"
   },
   "keywords": [
     "gatsby"
