--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
+    "@videojs/http-streaming": "^1.10.1",
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
     "emotion": "^10.0.7",
@@ -31,7 +32,8 @@
     "react-icons": "^3.5.0",
     "react-slick": "^0.23.2",
     "react-sticky-el": "^1.0.20",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "video.js": "^7.4.1"
   },
   "keywords": [
     "gatsby"
